force-app/main/default/objects/OpportunityLineItem/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product accepted by Customer</description>
    <inlineHelpText>Product accepted by Customer</inlineHelpText>
    <label>Accepted</label>
    <type>Checkbox</type>
</CustomField>