force-app/main/default/objects/OpportunityLineItem/fields/Alternative__c.field-meta.xml
<CustomField>
    <fullName>Alternative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is an alternative</label>
    <type>Checkbox</type>
</CustomField>