force-app/main/default/objects/OpportunityLineItem/fields/CodeFormula__c.field-meta.xml
<CustomField>
    <fullName>CodeFormula__c</fullName>
    <formula>IF(  ISBLANK(CodigoAuxiliar__c ),  PricebookEntry.Product2.ProductCode , CodigoAuxiliar__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code</label>
    <type>Text</type>
</CustomField>