force-app/main/default/objects/OpportunityLineItem/fields/CodigoAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>CodigoAuxiliar__c</fullName>
    <label>Auxiliar Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>