force-app/main/default/objects/OpportunityLineItem/fields/DescripcionAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>DescripcionAuxiliar__c</fullName>
    <label>Auxiliar Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>