force-app/main/default/objects/OpportunityLineItem/fields/DescriptionFormula__c.field-meta.xml
<CustomField>
    <fullName>DescriptionFormula__c</fullName>
    <formula>IF(  ISBLANK( DescripcionAuxiliar__c ),   PricebookEntry.Product2.Description , DescripcionAuxiliar__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>