force-app/main/default/objects/OpportunityLineItem/fields/FactoryPrice__c.field-meta.xml
<CustomField>
    <fullName>FactoryPrice__c</fullName>
    <label>FactoryPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>