force-app/main/default/objects/OpportunityLineItem/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <formula>PricebookEntry.Product2.StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material</label>
    <type>Text</type>
</CustomField>