force-app/main/default/objects/OpportunityLineItem/fields/Sample__c.field-meta.xml
<CustomField>
    <fullName>Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it a Sample?</description>
    <label>Is Sample</label>
    <type>Checkbox</type>
</CustomField>