force-app/main/default/objects/OpportunityLineItem/fields/Umb__c.field-meta.xml
<CustomField>
    <fullName>Umb__c</fullName>
    <formula>PricebookEntry.Product2.Umb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Umb</label>
    <type>Text</type>
</CustomField>