force-app/main/default/objects/OpportunityLineItem/fields/Umv__c.field-meta.xml
<CustomField>
    <fullName>Umv__c</fullName>
    <formula>TEXT(PricebookEntry.Uprice__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Unit</label>
    <type>Text</type>
</CustomField>