force-app/main/default/objects/OpportunityLineItem/validationRules/Description_required_when_Dummy.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_required_when_Dummy</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS( $Setup.SystemSettings__c.DummyProduct__c,  Product2.ProductCode),AND(ISBLANK(  DescripcionAuxiliar__c ), ISBLANK(  CodigoAuxiliar__c )))</errorConditionFormula>
    <errorDisplayField>DescripcionAuxiliar__c</errorDisplayField>
    <errorMessage>Dummy product must has an Auxiliar Code or an Auxiliar Description</errorMessage>
</ValidationRule>